--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -16,7 +16,7 @@ jobs:
 # Константы, используемые далее по тексту
     env:
       PROJ: MakeCST
-      TAG: 1.5u
+      TAG: 1.6
 
     steps:
 # Проверка состава репозитория (без анализа, как может показаться)
